--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -121,120 +121,42 @@
     <value>One photo one story</value>
   </data>
   <data name="AppName" xml:space="preserve">
-    <value>Timeline</value>
+    <value>Timeline for Windows 11</value>
   </data>
   <data name="AppNameShort" xml:space="preserve">
     <value>Timeline</value>
   </data>
-  <data name="Btn3GOrder.Text" xml:space="preserve">
-    <value>Order</value>
-  </data>
-  <data name="Btn3GOrder1.Text" xml:space="preserve">
-    <value>Newest</value>
-  </data>
-  <data name="Btn3GOrder2.Text" xml:space="preserve">
-    <value>Recently popular</value>
-  </data>
-  <data name="BtnAbout.Text" xml:space="preserve">
-    <value>About Timeline</value>
-  </data>
-  <data name="BtnBingLang.Text" xml:space="preserve">
-    <value>Country</value>
-  </data>
-  <data name="BtnBingLangCn.Text" xml:space="preserve">
-    <value>China</value>
-  </data>
-  <data name="BtnBingLangDe.Text" xml:space="preserve">
-    <value>Germany</value>
-  </data>
-  <data name="BtnBingLangDef.Text" xml:space="preserve">
-    <value>Auto</value>
-  </data>
-  <data name="BtnBingLangFr.Text" xml:space="preserve">
-    <value>France</value>
-  </data>
-  <data name="BtnBingLangJp.Text" xml:space="preserve">
-    <value>Japan</value>
-  </data>
-  <data name="BtnBingLangUs.Text" xml:space="preserve">
-    <value>United States</value>
-  </data>
-  <data name="BtnTimelineCate3.Text" xml:space="preserve">
-    <value>Portrait</value>
-  </data>
-  <data name="BtnTimelineCate4.Text" xml:space="preserve">
-    <value>Culture</value>
-  </data>
-  <data name="BtnTimelineOrder.Text" xml:space="preserve">
-    <value>Order</value>
-  </data>
-  <data name="BtnTimelineOrder1.Text" xml:space="preserve">
-    <value>Date</value>
-  </data>
-  <data name="BtnTimelineOrder2.Text" xml:space="preserve">
-    <value>Random</value>
-  </data>
-  <data name="BtnInfinityOrder.Text" xml:space="preserve">
-    <value>Order</value>
-  </data>
-  <data name="BtnInfinityOrder0.Text" xml:space="preserve">
-    <value>Random</value>
-  </data>
-  <data name="BtnInfinityOrder1.Text" xml:space="preserve">
-    <value>Highest rated</value>
-  </data>
-  <data name="BtnIni.Text" xml:space="preserve">
-    <value>Open configuration</value>
+  <data name="MenuSettings.Label" xml:space="preserve">
+    <value>Settings</value>
   </data>
   <data name="BtnInfoLink.Content" xml:space="preserve">
-    <value>Open</value>
+    <value>Go</value>
   </data>
-  <data name="BtnNasaMirror.Text" xml:space="preserve">
-    <value>Mirror</value>
-  </data>
-  <data name="BtnNasaMirrorBjp.Text" xml:space="preserve">
-    <value>Beijing Planetarium</value>
-  </data>
-  <data name="BtnNasaMirrorDef.Text" xml:space="preserve">
-    <value>Default</value>
-  </data>
-  <data name="BtnYesterday.Text" xml:space="preserve">
+  <data name="MenuYesterday.Label" xml:space="preserve">
     <value>Look back</value>
   </data>
-  <data name="BtnOneplusOrder.Text" xml:space="preserve">
-    <value>Order</value>
-  </data>
-  <data name="BtnOneplusOrder1.Text" xml:space="preserve">
-    <value>Newest</value>
-  </data>
-  <data name="BtnOneplusOrder2.Text" xml:space="preserve">
-    <value>Highest rated</value>
-  </data>
-  <data name="BtnOneplusOrder3.Text" xml:space="preserve">
-    <value>Recently popular</value>
-  </data>
-  <data name="BtnProvider.Text" xml:space="preserve">
+  <data name="MenuProvider.Label" xml:space="preserve">
     <value>Provider</value>
   </data>
-  <data name="BtnProviderBing.Text" xml:space="preserve">
+  <data name="MenuProviderBing.Text" xml:space="preserve">
     <value>Microsoft Bing - Explorer the world one photo at a time</value>
   </data>
-  <data name="BtnProviderInfinity.Text" xml:space="preserve">
-    <value>Infinity - 365天精选壁纸</value>
+  <data name="MenuProviderInfinity.Text" xml:space="preserve">
+    <value>Infinity - Pictures from all over the world</value>
   </data>
-  <data name="BtnProviderNasa.Text" xml:space="preserve">
+  <data name="MenuProviderNasa.Text" xml:space="preserve">
     <value>NASA - Astronomy picture of the day</value>
   </data>
-  <data name="BtnProviderOneplus.Text" xml:space="preserve">
+  <data name="MenuProviderOneplus.Text" xml:space="preserve">
     <value>OnePlus - Shot on OnePlus</value>
   </data>
-  <data name="BtnProviderTimeline.Text" xml:space="preserve">
+  <data name="MenuProviderTimeline.Text" xml:space="preserve">
     <value>Timeline - One photo one story</value>
   </data>
-  <data name="BtnProviderYmyouli.Text" xml:space="preserve">
-    <value>Ymyouli - 8K优质壁纸资源</value>
+  <data name="MenuProviderYmyouli.Text" xml:space="preserve">
+    <value>Ymyouli - 8K high-quality wallpapers</value>
   </data>
-  <data name="BtnPush.Text" xml:space="preserve">
+  <data name="MenuPush.Label" xml:space="preserve">
     <value>Push daily</value>
   </data>
   <data name="PushDesktop" xml:space="preserve">
@@ -243,53 +165,38 @@
   <data name="PushLock" xml:space="preserve">
     <value>Push lock screen: {0}</value>
   </data>
-  <data name="BtnPushNone.Text" xml:space="preserve">
+  <data name="MenuPushNone.Text" xml:space="preserve">
     <value>Push off</value>
   </data>
-  <data name="BtnSave.Text" xml:space="preserve">
+  <data name="MenuSave.Label" xml:space="preserve">
     <value>Save image</value>
   </data>
-  <data name="BtnSetDesktop.Text" xml:space="preserve">
+  <data name="MenuSetDesktop.Label" xml:space="preserve">
     <value>Set as desktop background</value>
   </data>
-  <data name="BtnSetLock.Text" xml:space="preserve">
+  <data name="MenuSetLock.Label" xml:space="preserve">
     <value>Set as lock screen background</value>
   </data>
-  <data name="BtnTimelineCate.Text" xml:space="preserve">
-    <value>Category</value>
-  </data>
-  <data name="BtnTimelineCate1.Text" xml:space="preserve">
-    <value>All</value>
-  </data>
-  <data name="BtnTimelineCate2.Text" xml:space="preserve">
-    <value>Landscape</value>
-  </data>
-  <data name="BtnVolumnOff.Text" xml:space="preserve">
+  <data name="MenuVolumnOff.ToolTipService.ToolTip" xml:space="preserve">
     <value>Volumn off</value>
   </data>
-  <data name="BtnVolumnOn.Text" xml:space="preserve">
+  <data name="MenuVolumnOn.ToolTipService.ToolTip" xml:space="preserve">
     <value>Volumn on</value>
   </data>
-  <data name="BtnYmyouliCol.Text" xml:space="preserve">
-    <value>Category</value>
-  </data>
-  <data name="BtnYmyouliCol182.Text" xml:space="preserve">
+  <data name="YmyouliCol_182" xml:space="preserve">
     <value>ACG character</value>
   </data>
-  <data name="BtnYmyouliCol183.Text" xml:space="preserve">
+  <data name="YmyouliCol_183" xml:space="preserve">
     <value>ACG scene</value>
   </data>
-  <data name="BtnYmyouliCol184.Text" xml:space="preserve">
+  <data name="YmyouliCol_184" xml:space="preserve">
     <value>Nature</value>
   </data>
-  <data name="BtnYmyouliCol185.Text" xml:space="preserve">
+  <data name="YmyouliCol_185" xml:space="preserve">
     <value>Plant</value>
   </data>
-  <data name="BtnYmyouliCol215.Text" xml:space="preserve">
+  <data name="YmyouliCol_215" xml:space="preserve">
     <value>Artistry</value>
-  </data>
-  <data name="BtnYmyouliColDef.Text" xml:space="preserve">
-    <value>Random</value>
   </data>
   <data name="DetailSize" xml:space="preserve">
     <value>{0} / {1}x{2}, {3}</value>
@@ -385,7 +292,7 @@
     <value>随机二次元图片</value>
   </data>
   <data name="Slogan_infinity" xml:space="preserve">
-    <value>365天精选壁纸</value>
+    <value>Pictures from all over the world</value>
   </data>
   <data name="Slogan_lofter" xml:space="preserve">
     <value>看见每一种兴趣</value>
@@ -421,48 +328,48 @@
     <value>随机二次元图片</value>
   </data>
   <data name="Slogan_ymyouli" xml:space="preserve">
-    <value>8K优质壁纸资源</value>
+    <value>8K high-quality wallpapers</value>
   </data>
-  <data name="BtnYmyouliCol186.Text" xml:space="preserve">
+  <data name="YmyouliCol_186" xml:space="preserve">
     <value>Girl</value>
   </data>
-  <data name="BtnYmyouliCol187.Text" xml:space="preserve">
+  <data name="YmyouliCol_187" xml:space="preserve">
     <value>Car</value>
   </data>
-  <data name="BtnYmyouliCol214.Text" xml:space="preserve">
+  <data name="YmyouliCol_214" xml:space="preserve">
     <value>Science fictrion</value>
   </data>
-  <data name="BtnYmyouliCol224.Text" xml:space="preserve">
+  <data name="YmyouliCol_224" xml:space="preserve">
     <value>Weapon</value>
   </data>
-  <data name="BtnYmyouliCol225.Text" xml:space="preserve">
+  <data name="YmyouliCol_225" xml:space="preserve">
     <value>Animal</value>
   </data>
-  <data name="BtnYmyouliCol226.Text" xml:space="preserve">
+  <data name="YmyouliCol_226" xml:space="preserve">
     <value>Costume</value>
   </data>
-  <data name="BtnYmyouliCol227.Text" xml:space="preserve">
+  <data name="YmyouliCol_227" xml:space="preserve">
     <value>Sunset</value>
   </data>
-  <data name="BtnYmyouliCol228.Text" xml:space="preserve">
+  <data name="YmyouliCol_228" xml:space="preserve">
     <value>Night sky</value>
   </data>
-  <data name="BtnYmyouliCol229.Text" xml:space="preserve">
+  <data name="YmyouliCol_229" xml:space="preserve">
     <value>War</value>
   </data>
-  <data name="BtnYmyouliCol230.Text" xml:space="preserve">
+  <data name="YmyouliCol_230" xml:space="preserve">
     <value>Ice and snow</value>
   </data>
-  <data name="BtnYmyouliCol231.Text" xml:space="preserve">
+  <data name="YmyouliCol_231" xml:space="preserve">
     <value>Painting</value>
   </data>
-  <data name="BtnYmyouliCol232.Text" xml:space="preserve">
+  <data name="YmyouliCol_232" xml:space="preserve">
     <value>Chinese animation</value>
   </data>
-  <data name="BtnYmyouliCol233.Text" xml:space="preserve">
+  <data name="YmyouliCol_233" xml:space="preserve">
     <value>Delicacy</value>
   </data>
-  <data name="BtnYmyouliCol241.Text" xml:space="preserve">
+  <data name="YmyouliCol_241" xml:space="preserve">
     <value>Cherry</value>
   </data>
   <data name="MsgUpdate" xml:space="preserve">
@@ -480,10 +387,7 @@
   <data name="TextReview0.Text" xml:space="preserve">
     <value>If you like Timeline, rate it on </value>
   </data>
-  <data name="DlgAbout.Title" xml:space="preserve">
-    <value>Timeline{0}</value>
-  </data>
-  <data name="BtnProviderHimawari8.Text" xml:space="preserve">
+  <data name="MenuProviderHimawari8.Text" xml:space="preserve">
     <value>Himawari-8 - Real-time earth</value>
   </data>
   <data name="Provider_himawari8" xml:space="preserve">
@@ -505,19 +409,19 @@
     <value>ms-windows-store://review/?ProductId=9N7VHQ989BB7</value>
   </data>
   <data name="TextContatc0.Text" xml:space="preserve">
-    <value>Any questions, please </value>
+    <value>Check out the project on </value>
   </data>
   <data name="TextContatc1.Text" xml:space="preserve">
-    <value>email</value>
-  </data>
-  <data name="TextContatc2.Text" xml:space="preserve">
-    <value> me, or check out the project on </value>
-  </data>
-  <data name="TextContatc3.Text" xml:space="preserve">
     <value>GitHub</value>
   </data>
+  <data name="TextContatc2.Text" xml:space="preserve">
+    <value>. Any questions, please </value>
+  </data>
+  <data name="TextContatc3.Text" xml:space="preserve">
+    <value>email</value>
+  </data>
   <data name="TextContatc4.Text" xml:space="preserve">
-    <value>.</value>
+    <value> me.</value>
   </data>
   <data name="TextCopyright.Text" xml:space="preserve">
     <value>© 2021 nguaduot. All rights reserved.</value>
@@ -551,5 +455,191 @@
   </data>
   <data name="TextReview4.Text" xml:space="preserve">
     <value>. (●'◡'●)</value>
+  </data>
+  <data name="BingLang_" xml:space="preserve">
+    <value>Audo</value>
+  </data>
+  <data name="BingLang_zh-cn" xml:space="preserve">
+    <value>China</value>
+  </data>
+  <data name="BingLang_de-de" xml:space="preserve">
+    <value>German</value>
+  </data>
+  <data name="BingLang_fr-fr" xml:space="preserve">
+    <value>France</value>
+  </data>
+  <data name="BingLang_ja-jp" xml:space="preserve">
+    <value>Japan</value>
+  </data>
+  <data name="BingLang_en-us" xml:space="preserve">
+    <value>United States</value>
+  </data>
+  <data name="BoxGo.Header" xml:space="preserve">
+    <value>Look back</value>
+  </data>
+  <data name="BtnIni.Content" xml:space="preserve">
+    <value>Go</value>
+  </data>
+  <data name="CurDate" xml:space="preserve">
+    <value>current: {0}</value>
+  </data>
+  <data name="RbThemeDark.Content" xml:space="preserve">
+    <value>深色</value>
+  </data>
+  <data name="RbThemeLight.Content" xml:space="preserve">
+    <value>浅色</value>
+  </data>
+  <data name="RbThemeSys.Content" xml:space="preserve">
+    <value>使用系统设置</value>
+  </data>
+  <data name="SettingsBingDesc.Text" xml:space="preserve">
+    <value>Explorer the world one photo at a time</value>
+  </data>
+  <data name="SettingsBingTitle.Text" xml:space="preserve">
+    <value>Microsoft Bing</value>
+  </data>
+  <data name="SettingsIniDesc.Text" xml:space="preserve">
+    <value>View or modify configuration file</value>
+  </data>
+  <data name="SettingsIniTitle.Text" xml:space="preserve">
+    <value>Configuration file</value>
+  </data>
+  <data name="SettingsThemeDesc.Text" xml:space="preserve">
+    <value>选择要显示的应用主题</value>
+  </data>
+  <data name="SettingsThemeTitle.Text" xml:space="preserve">
+    <value>应用程序主题</value>
+  </data>
+  <data name="TextAbout.Text" xml:space="preserve">
+    <value>About</value>
+  </data>
+  <data name="TextBingLang.Text" xml:space="preserve">
+    <value>Country</value>
+  </data>
+  <data name="TextSettings.Text" xml:space="preserve">
+    <value>Settings</value>
+  </data>
+  <data name="TextSettingsBeta.Text" xml:space="preserve">
+    <value>Laboratory</value>
+  </data>
+  <data name="TextSettingsGeneral.Text" xml:space="preserve">
+    <value>General</value>
+  </data>
+  <data name="TextSettingsProvider.Text" xml:space="preserve">
+    <value>Provider</value>
+  </data>
+  <data name="BoxHimiwari8Offset.PlaceholderText" xml:space="preserve">
+    <value>-1.0~1.0</value>
+  </data>
+  <data name="BtnShowCache.Content" xml:space="preserve">
+    <value>Go</value>
+  </data>
+  <data name="BtnShowIni.Content" xml:space="preserve">
+    <value>Show</value>
+  </data>
+  <data name="BtnShowSave.Content" xml:space="preserve">
+    <value>Go</value>
+  </data>
+  <data name="DetailSave" xml:space="preserve">
+    <value>{0} pictures saved</value>
+  </data>
+  <data name="InfinityOrder_" xml:space="preserve">
+    <value>Random</value>
+  </data>
+  <data name="InfinityOrder_rate" xml:space="preserve">
+    <value>Highest rated</value>
+  </data>
+  <data name="OneplusOrder_date" xml:space="preserve">
+    <value>Newest</value>
+  </data>
+  <data name="OneplusOrder_rate" xml:space="preserve">
+    <value>Highest rated</value>
+  </data>
+  <data name="OneplusOrder_view" xml:space="preserve">
+    <value>Recently popular</value>
+  </data>
+  <data name="SettingsHimiwari8Desc.Text" xml:space="preserve">
+    <value>Real-time earth</value>
+  </data>
+  <data name="SettingsHimiwari8Title.Text" xml:space="preserve">
+    <value>Himawari-8</value>
+  </data>
+  <data name="SettingsInfinityDesc.Text" xml:space="preserve">
+    <value>Pictures from all over the world</value>
+  </data>
+  <data name="SettingsInfinityTitle.Text" xml:space="preserve">
+    <value>Infinity</value>
+  </data>
+  <data name="SettingsNasaDesc.Text" xml:space="preserve">
+    <value>Astronomy picture of the day</value>
+  </data>
+  <data name="SettingsNasaTitle.Text" xml:space="preserve">
+    <value>NASA</value>
+  </data>
+  <data name="SettingsOneplusDesc.Text" xml:space="preserve">
+    <value>Shot on OnePlus</value>
+  </data>
+  <data name="SettingsOneplusTitle.Text" xml:space="preserve">
+    <value>Oneplus</value>
+  </data>
+  <data name="SettingsSaveTitle.Text" xml:space="preserve">
+    <value>Save location</value>
+  </data>
+  <data name="SettingsTimelineDesc.Text" xml:space="preserve">
+    <value>One photo one story</value>
+  </data>
+  <data name="SettingsTimelineTitle.Text" xml:space="preserve">
+    <value>Timeline</value>
+  </data>
+  <data name="SettingsYmyouliDesc.Text" xml:space="preserve">
+    <value>8K high-quality wallpapers</value>
+  </data>
+  <data name="SettingsYmyouliTitle.Text" xml:space="preserve">
+    <value>Ymyouli</value>
+  </data>
+  <data name="TextCache.Text" xml:space="preserve">
+    <value>Cache location</value>
+  </data>
+  <data name="TextHimiwari8Offset.Text" xml:space="preserve">
+    <value>Earth position</value>
+  </data>
+  <data name="TextInfinityOrder.Text" xml:space="preserve">
+    <value>Order</value>
+  </data>
+  <data name="TextNasaMirror.Text" xml:space="preserve">
+    <value>Use mirror of Beijing Planetarium</value>
+  </data>
+  <data name="TextOneplusOrder.Text" xml:space="preserve">
+    <value>Order</value>
+  </data>
+  <data name="TextShowIni.Text" xml:space="preserve">
+    <value>Configuration file location</value>
+  </data>
+  <data name="TextTimelineCate.Text" xml:space="preserve">
+    <value>Category</value>
+  </data>
+  <data name="TextTimelineOrder.Text" xml:space="preserve">
+    <value>Order</value>
+  </data>
+  <data name="TextYmyouliCol.Text" xml:space="preserve">
+    <value>Category</value>
+  </data>
+  <data name="TimelineCate_" xml:space="preserve">
+    <value>All</value>
+  </data>
+  <data name="TimelineCate_culture" xml:space="preserve">
+    <value>Culture</value>
+  </data>
+  <data name="TimelineCate_landscape" xml:space="preserve">
+    <value>Landscape</value>
+  </data>
+  <data name="TimelineCate_portrait" xml:space="preserve">
+    <value>Portrait</value>
+  </data>
+  <data name="TimelineOrder_date" xml:space="preserve">
+    <value>Date</value>
+  </data>
+  <data name="TimelineOrder_random" xml:space="preserve">
+    <value>Random</value>
   </data>
 </root>
