--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -642,4 +642,7 @@
   <data name="TimelineOrder_random" xml:space="preserve">
     <value>Random</value>
   </data>
+  <data name="YmyouliCol_" xml:space="preserve">
+    <value>Random</value>
+  </data>
 </root>
