--- a/Strings/zh-CN/Resources.resw
+++ b/Strings/zh-CN/Resources.resw
@@ -126,7 +126,7 @@
   <data name="AppNameShort" xml:space="preserve">
     <value>拾光</value>
   </data>
-  <data name="MenuSettings.Label" xml:space="preserve">
+  <data name="MenuSettings.ToolTipService.ToolTip" xml:space="preserve">
     <value>设置</value>
   </data>
   <data name="BtnInfoLink.Content" xml:space="preserve">
@@ -372,7 +372,7 @@
   <data name="TipMenu.Title" xml:space="preserve">
     <value>操作提示</value>
   </data>
-  <data name="DlgAbout.CloseButtonText" xml:space="preserve">
+  <data name="DlgReview.CloseButtonText" xml:space="preserve">
     <value>下次一定</value>
   </data>
   <data name="TextReview0.Text" xml:space="preserve">
@@ -653,5 +653,29 @@
   </data>
   <data name="SettingsContributeTitle.Text" xml:space="preserve">
     <value>我要投稿</value>
+  </data>
+  <data name="Provider_abyss" xml:space="preserve">
+    <value>Wallpaper Abyss</value>
+  </data>
+  <data name="Slogan_abyss" xml:space="preserve">
+    <value>935361张壁纸的聚集地</value>
+  </data>
+  <data name="TextContributeUrl.Text" xml:space="preserve">
+    <value>链接</value>
+  </data>
+  <data name="DlgReview.PrimaryButtonText" xml:space="preserve">
+    <value>前往评分</value>
+  </data>
+  <data name="MsgCtrlR" xml:space="preserve">
+    <value>Ctrl+R：刷新；左方向键：浏览往期图片</value>
+  </data>
+  <data name="MsgF5" xml:space="preserve">
+    <value>F5：刷新；左方向键：浏览往期图片</value>
+  </data>
+  <data name="MsgKey" xml:space="preserve">
+    <value>快捷键</value>
+  </data>
+  <data name="TextContribute.Text" xml:space="preserve">
+    <value>投稿即同意本项目非商业性使用您的摄影作品。</value>
   </data>
 </root>
