--- a/Strings/zh-CN/Resources.resw
+++ b/Strings/zh-CN/Resources.resw
@@ -732,4 +732,7 @@
   <data name="MsgContribute0" xml:space="preserve">
     <value>投稿失败</value>
   </data>
+  <data name="TimelineCate_term" xml:space="preserve">
+    <value>节气摄影</value>
+  </data>
 </root>
