--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -735,4 +735,10 @@
   <data name="TimelineCate_term" xml:space="preserve">
     <value>Solar term</value>
   </data>
+  <data name="Provider_one" xml:space="preserve">
+    <value>ONE</value>
+  </data>
+  <data name="Slogan_one" xml:space="preserve">
+    <value>ONE IS ALL</value>
+  </data>
 </root>
